tests/error/type_match/base_case_array_mismatched_type.bz
// error: unable to match type 'int64' to 'int32'
// note: while matching expression of type '[4: int64]' to '[4: int32]'
function test()
{
	let _: [4: int32] = [4: int64]();
}
